# aus-address-matcher

./: .flake8  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  address_matcher.py  common.py  initialise_db.py
src/test/: test.py
src/test/data/: README  sample_addresses.csv  sample_addresses.txt
